# TcpIp_client_server

./: README.md
client/: CMakeLists.txt
client/doc/: client_doc.md
client/include/: class_client.h
client/src/: class_client.cpp  client.cpp  client_data.xml  server_data.xml
lib_parser/: CMakeLists.txt
lib_parser/cmake/: LibParserSaverConfig.cmake.in
lib_parser/doc/: parser_doc.md  saver_doc.md
lib_parser/include/LibParserSaver/: class_parser.h  class_saver.h
lib_parser/src/: class_parser.cpp  class_saver.cpp  parser.cpp  state.xml  structs.cpp
server/: CMakeLists.txt
server/doc/: server_doc.md
server/include/: class_server.h
server/src/: class_server.cpp  server.cpp
